# crPipeline

./: .gitignore  LICENSE  PLAN.md  README.md  TODO123.md  docker-compose.yml
backend/: .env.example  .env.test.example  Cargo.toml  Dockerfile
backend/migrations/0001_create_tables/: up.sql
backend/migrations/0002_processing/: down.sql  up.sql
backend/migrations/0004_user_tokens/: down.sql  up.sql
backend/migrations/0005_org_settings/: up.sql
backend/migrations/0006_audit_logs/: up.sql
backend/migrations/0007_org_api_key/: down.sql  up.sql
backend/migrations/0008_add_ai_ocr_prompts_to_org_settings/: down.sql  up.sql
backend/migrations/0009_create_job_stage_outputs/: down.sql  up.sql
backend/migrations/0010_add_ai_custom_headers_to_org_settings/: down.sql  up.sql
backend/migrations/0011_add_user_active_status/: down.sql  up.sql
backend/migrations/0012_add_display_name_to_documents/: down.sql  up.sql
backend/migrations/0013_add_created_at_to_users/: up.sql
backend/src/: config.rs  email.rs  error.rs  lib.rs  main.rs  metrics.rs  pipeline_validation.rs  processing.rs  utils.rs
backend/src/handlers/: admin.rs  audit.rs  auth.rs  dashboard.rs  document.rs  health.rs  job.rs  mod.rs  org.rs  pipeline.rs  settings.rs
backend/src/handlers/admin/: invites.rs  mod.rs  user_management.rs
backend/src/handlers/org/: invites.rs  mod.rs  user_management.rs
backend/src/middleware/: auth.rs  csrf_check.rs  jwt.rs  metrics.rs  mod.rs  rate_limit.rs  request_metrics.rs
backend/src/models/: analysis_job.rs  audit_log.rs  document.rs  job_stage_output.rs  mod.rs  organization.rs  pipeline.rs  settings.rs  user.rs
backend/src/processing/: ai.rs  ai_client.rs  mod.rs  ocr.rs  parse.rs  report.rs
backend/src/worker/: ai.rs  metrics.rs  mod.rs  ocr.rs  report.rs  stage.rs  storage.rs
backend/tests/: README.md  admin_endpoints.rs  admin_invite_tests.rs  admin_role_tests.rs  admin_user_management.rs  ai_ocr_retry.rs  audit_log_tests.rs  auth_middleware.rs  cleanup.rs  csrf_check.rs  document_delete.rs  document_tests.rs  e2e_full_job.rs  e2e_job_errors.rs  e2e_job_flow.rs  email_worker.rs  env_var_check.rs  health.rs  job_list_tests.rs  jwt.rs  logging.rs  login_tests.rs  logout.rs  logout_tests.rs  metrics_tests.rs  org_management_tests.rs  parse_regex.rs  parse_stage.rs  pdf_render.rs  pipeline_clone_tests.rs  pipeline_crud_integration.rs  pipeline_tests.rs  pipeline_validation_tests.rs  rate_limit_tests.rs  readiness.rs  report_template_summary.rs  s3_upload_failure.rs  settings_tests.rs  sighup_reload.rs  test_utils.rs  (+1 more)
deploy/: worker.service
docs/: API_Examples.md  Architecture.md  Changelog.md  Continuous_Integration.md  DaisyUI_Themes.md  Deployment.md  Environment.md  Monitoring.md  Security.md  Setup.md  Theming.md  Todo-fuer-User.md  Usage.md  api.html  openapi.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  (+3 more)
(+125 files in other folders)
