[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.7"
actix-rt = "2"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aws-config = "0.56"
aws-sdk-s3 = "0.31"
futures-util = "0.3"
actix-web-lab = "0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
lopdf = "0.32"
dashmap = "5"
once_cell = "1"
actix-service = "2"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
printpdf = "0.5"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }

[dev-dependencies]
actix-http-test = "3"
