[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.7"
actix-rt = "2"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
aws-config = "0.56"
aws-sdk-s3 = "0.31"
futures-util = "0.3"
actix-web-lab = "0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
lopdf = "0.32"
dashmap = "5"
once_cell = "1"
actix-service = "2"
redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
printpdf = "0.5"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
regex = "1" # Added for parse stage processing
pulldown-cmark = "0.9" # For Markdown to PDF report generation
jsonpath-rust = "1.0.2"  # For extracting summary fields in report stage
sanitize-filename = "0.1" # For sanitizing original filenames for S3 keys
log = "0.4"
async-trait = "0.1"

[features]
worker-bin = []

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
required-features = ["worker-bin"]

[dev-dependencies]
actix-http-test = "3"
actix-http = "3"
tempfile = "3"
lopdf = "0.32"
wiremock = "0.6"
